styles/real-estate-styles.css
/* ... */
@media screen and (max-width: 1000px) {
  .overview {
    flex-direction: column;
    align-items: center;
  }
  .overview .overview-illustration {
    display: none;
  }
}
@media screen and (max-width: 768px) {
  .overview {
    padding: 2rem 2rem;
  }
}
.overview .overview-illustration, .overview .overview-about {
  flex: 1;
}
.overview .overview-illustration img {
  width: 100%;
}
.overview .overview-about h1 {
  font-size: 6.4rem;
  margin-top: 0;
  line-height: 6.4rem;
  color: #1A1818;
  font-weight: 300;
  padding-bottom: 2rem;
  border-bottom: 0.05rem solid #BFBFBF;
}
@media screen and (max-width: 768px) {
  .overview .overview-about h1 {
    font-size: 3.6rem;
  }
}
.overview .overview-about .paragraphs p {
  line-height: 2.5rem;
  font-size: 1.4rem;
  color: #5E5E5E;
  margin: 1.5rem 0;
  font-family: "DM Sans", sans-serif;
}
@media screen and (max-width: 600px) {
  .overview .overview-about .paragraphs p {
    margin: 0;
  }
}

.services-section {
  padding: 3rem 6rem;
}
@media screen and (max-width: 768px) {
  .services-section {
    padding: 2rem 2rem;
  }
}
.services-section .main-title {
  font-size: 4.8rem;
  font-family: "Suranna", serif;
  font-weight: 300;
  color: #1A1818;
}
@media screen and (max-width: 768px) {
  .services-section .main-title {
    margin-bottom: 2rem;
    font-size: 3.6rem;
  }
}
.services-section .services {
  display: flex;
  flex-wrap: wrap;
  gap: 3.5rem;
  align-items: center;
  justify-content: flex-start;
  width: 100%;
}
@media screen and (min-width: 76.8rem) and (max-width: 120rem) {
  .services-section .services {
    gap: 2.2rem;
  }
}
@media screen and (max-width: 600px) {
  .services-section .services {
    justify-content: center;
  }
}
.services-section .services .service {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-end;
  height: 32rem;
  flex-basis: 28rem;
  background-repeat: no-repeat;
  background-size: 100% 100%;
  padding: 2rem;
}
@media screen and (min-width: 768px) and (max-width: 1200px) {
  .services-section .services .service {
    flex-basis: 26rem;
  }
}
.services-section .services .service h1 {
  font-size: 3.6rem;
  font-family: "Suranna", serif;
  font-weight: 300;
  color: #ffffff;
  margin-bottom: 1.5rem;
  line-height: 3.8rem;
}
@media screen and (max-width: 500px) {
  .services-section .services .service h1 {
    font-size: 2.8rem;
  }
}
.services-section .services .service a {
  color: #ffffff;
  font-family: "DM Sans", sans-serif;
  font-size: 1.4rem;
  text-decoration: none;
  opacity: 0.7;
}
.services-section .services .service a i {
  font-size: 0.9rem;
}
.services-section .services .service a:hover {
  text-decoration: underline;
}
.services-section .services .service.bas {
  background: linear-gradient(180deg, rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.6) 75%), url("../Assets/bas.png");
}
.services-section .services .service.ren {
  background: linear-gradient(180deg, rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.6) 75%), url("../Assets/rent-a-house.jpg");
}
.services-section .services .service.npd {
  background: linear-gradient(180deg, rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.6) 75%), url("../Assets/npd.png");
}
.services-section .services .service.cph {
  background: linear-gradient(180deg, rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.6) 75%), url("../Assets/cph.png");
}
.services-section .services .service.ret {
  background: linear-gradient(180deg, rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.6) 75%), url("../Assets/ret.png");
}
.services-section .services .service.idp {
  background: linear-gradient(180deg, rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.6) 75%), url("../Assets/idp.png");
}
.services-section .services .service.ofs {
  background: linear-gradient(180deg, rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.6) 75%), url("../Assets/ofs.png");
}
.services-section .services .service.mdp {
  background: linear-gradient(180deg, rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.6) 75%), url("../Assets/mdp.png");
}
.services-section .services .service.bkp {
  background: linear-gradient(180deg, rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.6) 75%), url("../Assets/bkp.png");
}
.services-section .services .service.agp {
  background: linear-gradient(180deg, rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.6) 75%), url("../Assets/agp.png");
}
.services-section .services .service.ldp {
  background: linear-gradient(180deg, rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.6) 75%), url("../Assets/ldp.png");
}
.services-section .services .service.pmg {
  background: linear-gradient(180deg, rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.6) 75%), url("../Assets/pmg.png");
}
.services-section .services .service.smm {
  background: linear-gradient(180deg, rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.6) 75%), url("../Assets/marketing-house-img.jpeg");
}
.services-section .services .service:nth-child(odd), .services-section .services .service:nth-child(even) {
  background-repeat: no-repeat;
  background-size: 100% 100%;
  border-radius: 0.3rem;
}
.services-section .services .service.ldp, .services-section .services .service.smm {
  background-size: 100% 110%;
}

.contact-us {
  display: flex;
  margin: 12rem 6rem 20rem;
  padding: 12rem 8rem;
  background-image: url("../Assets/blue contact form section.png");
  background-size: cover;
  background-repeat: no-repeat;
  display: flex;
  justify-content: space-between;
}
@media screen and (max-width: 400px) {
  .contact-us {
    margin: 5rem 0;
    margin-bottom: 10rem;
    padding: 0;
  }
}
.contact-us .contact, .contact-us form {
  flex: 1;
}
.contact-us .contact {
  display: flex;
  flex-direction: column;
  padding-bottom: 5rem;
  gap: 5rem;
}
.contact-us .contact h1 {
  font-family: "Suranna", serif;
  font-size: 6.4rem;
  color: #ffffff;
  font-weight: 300;
  line-height: 6.8rem;
}
@media screen and (max-width: 600px) {
  .contact-us .contact h1 {
    font-size: 3.6rem;
    line-height: 4rem;
  }
}
/* ... */

